[gd_scene load_steps=3 format=3 uid="uid://cp65o8ekxyq48"]

[ext_resource type="Script" uid="uid://d4g1wxmscxutl" path="res://TankBattle/scenes/databaseFirebase/sign_up.gd" id="1_pfe3f"]
[ext_resource type="Texture2D" uid="uid://ddfvorxn32tan" path="res://TankBattle/scenes/databaseFirebase/dangKy.jpg" id="2_y58ma"]

[node name="SignUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 51.0
offset_right = 33.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfe3f")

[node name="DangKy" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.352941)
position = Vector2(560, 327.5)
scale = Vector2(1.1543, 1.11357)
texture = ExtResource("2_y58ma")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -186.0
offset_right = 192.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="StateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.392761, 0.859375, 0.392761, 1)
theme_override_font_sizes/font_size = 40
text = "Đăng ký tài khoản "

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "Email"

[node name="PaswordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "Mật khẩu"
secret = true

[node name="PasswordLineEdit2" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "Nhập lại mật khẩu "
secret = true

[node name="SignUpButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Đăng ký "

[node name="HTTPRequest" type="HTTPRequest" parent="VBoxContainer"]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Đăng nhập "

[connection signal="pressed" from="VBoxContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
